[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Board.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/TurnOrder.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/SmallButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/LargeButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Title.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/HeroPool.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/InfoBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/UI.gd" type="Script" id=8]

[node name="UI" type="Node2D"]
script = ExtResource( 8 )

[node name="Board" parent="." instance=ExtResource( 1 )]
position = Vector2( 45, 90 )

[node name="ResetButton" parent="." instance=ExtResource( 4 )]
position = Vector2( 360, 639 )
scale = Vector2( 5, 5 )
buttonScale = 5
buttonLabel = "reset"

[node name="PlayButton" parent="." instance=ExtResource( 4 )]
position = Vector2( 90, 639 )
scale = Vector2( 5, 5 )
buttonScale = 5
buttonIcon = 41

[node name="StopButton" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 90, 639 )
scale = Vector2( 5, 5 )
buttonScale = 5
buttonLabel = "Stop"
buttonIcon = 53

[node name="TurnOrder" parent="." instance=ExtResource( 2 )]
position = Vector2( 31.5, 540 )
scale = Vector2( 2, 2 )

[node name="Title" parent="." instance=ExtResource( 5 )]
position = Vector2( 338, 27 )
scale = Vector2( 3, 3 )
title = "Cavern"
level = 42

[node name="HeroPool" parent="." instance=ExtResource( 6 )]
position = Vector2( 639, 90 )
scale = Vector2( 5, 5 )

[node name="InfoBox" parent="." instance=ExtResource( 7 )]
position = Vector2( 639, 315 )
scale = Vector2( 5, 5 )

[node name="MenuButton" parent="." instance=ExtResource( 3 )]
position = Vector2( 855, 630 )
scale = Vector2( 7.5, 7.5 )
buttonIcon = 80

[node name="NormalSpeedButton" parent="." instance=ExtResource( 3 )]
position = Vector2( 675, 630 )
scale = Vector2( 7.5, 7.5 )
buttonIcon = 81

[node name="DoubleSpeedButton" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 675, 630 )
scale = Vector2( 7.5, 7.5 )
buttonIcon = 82

[node name="SoundButton" parent="." instance=ExtResource( 3 )]
position = Vector2( 765, 630 )
scale = Vector2( 7.5, 7.5 )

[node name="NoSoundButton" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 765, 630 )
scale = Vector2( 7.5, 7.5 )
buttonIcon = 79
